# qt_paint_template

./: .gitmodules  CMakeLists.txt  build.bat  readme.md
installers/: eigen3.bat  jsoncpp.bat  qtbase.bat
src/include/: Buffer.hpp  Context.hpp  FileHandler.hpp  Hello.hpp  Painter.hpp  Shader.hpp  Window.hpp
src/lib/: Buffer.cpp  Context.cpp  FileHandler.cpp  Hello.cpp  Painter.cpp  Shader.cpp  Window.cpp  entry.cpp
